--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,2 @@
-project('markdown-renderer', 'cpp',
-  version : '0.1',
-  default_options : ['warning_level=3', 'cpp_std=c++14'])
-
-executable('markdown-renderer',
-           'main.cpp',
-           install : true)
+project('mrender', 'c')
+executable('mrender', 'src/main.c')
